--- a/doc/plot.tex
+++ b/doc/plot.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.12.6 on 2024-04-12 11:27:55
+% Created by tikzDevice version 0.12.6 on 2024-04-23 11:24:49
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
@@ -60,43 +60,7 @@
 	(121.82,130.66);
 \definecolor{drawColor}{RGB}{27,158,119}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.66, 52.07) --
-	( 37.66, 52.04) --
-	( 40.67, 52.04) --
-	( 43.67, 52.04) --
-	( 46.68, 52.04) --
-	( 49.68, 52.05) --
-	( 52.69, 52.04) --
-	( 55.70, 52.05) --
-	( 58.70, 52.04) --
-	( 61.71, 52.04) --
-	( 64.71, 52.04) --
-	( 67.72, 52.04) --
-	( 70.73, 52.04) --
-	( 73.73, 52.04) --
-	( 76.74, 52.05) --
-	( 79.74, 52.05) --
-	( 82.75, 52.04) --
-	( 85.75, 52.04) --
-	( 88.76, 52.09) --
-	( 91.77, 52.05) --
-	( 94.77, 52.05) --
-	( 97.78, 52.05) --
-	(100.78, 52.05) --
-	(103.79, 52.04) --
-	(106.80, 52.04) --
-	(109.80, 52.04) --
-	(112.81, 52.04) --
-	(115.81, 52.04) --
-	(118.82, 52.04) --
-	(121.82, 52.05) --
-	(124.83, 52.05) --
-	(127.84, 52.05) --
-	(130.84, 52.04) --
-	(133.85, 52.05) --
-	(136.85, 52.04);
-
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] ( 34.66, 54.53) --
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.66, 54.53) --
 	( 37.66, 54.50) --
 	( 40.67, 54.50) --
 	( 43.67, 54.49) --
@@ -131,9 +95,45 @@
 	(130.84, 54.50) --
 	(133.85, 54.50) --
 	(136.85, 54.50);
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] ( 34.66, 52.07) --
+	( 37.66, 52.04) --
+	( 40.67, 52.04) --
+	( 43.67, 52.04) --
+	( 46.68, 52.04) --
+	( 49.68, 52.05) --
+	( 52.69, 52.04) --
+	( 55.70, 52.05) --
+	( 58.70, 52.04) --
+	( 61.71, 52.04) --
+	( 64.71, 52.04) --
+	( 67.72, 52.04) --
+	( 70.73, 52.04) --
+	( 73.73, 52.04) --
+	( 76.74, 52.05) --
+	( 79.74, 52.05) --
+	( 82.75, 52.04) --
+	( 85.75, 52.04) --
+	( 88.76, 52.09) --
+	( 91.77, 52.05) --
+	( 94.77, 52.05) --
+	( 97.78, 52.05) --
+	(100.78, 52.05) --
+	(103.79, 52.04) --
+	(106.80, 52.04) --
+	(109.80, 52.04) --
+	(112.81, 52.04) --
+	(115.81, 52.04) --
+	(118.82, 52.04) --
+	(121.82, 52.05) --
+	(124.83, 52.05) --
+	(127.84, 52.05) --
+	(130.84, 52.04) --
+	(133.85, 52.05) --
+	(136.85, 52.04);
 \definecolor{drawColor}{RGB}{217,95,2}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.66, 49.39) --
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] ( 34.66, 49.39) --
 	( 37.66, 49.33) --
 	( 40.67, 49.33) --
 	( 43.67, 49.33) --
@@ -170,43 +170,7 @@
 	(136.85, 49.33);
 \definecolor{drawColor}{RGB}{117,112,179}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.66, 29.90) --
-	( 37.66, 30.63) --
-	( 40.67, 30.63) --
-	( 43.67, 29.90) --
-	( 46.68, 30.63) --
-	( 49.68, 31.33) --
-	( 52.69, 32.63) --
-	( 55.70, 33.82) --
-	( 58.70, 35.45) --
-	( 61.71, 38.26) --
-	( 64.71, 40.62) --
-	( 67.72, 42.34) --
-	( 70.73, 46.05) --
-	( 73.73, 49.23) --
-	( 76.74, 52.36) --
-	( 79.74, 64.35) --
-	( 82.75, 58.30) --
-	( 85.75, 68.19) --
-	( 88.76, 70.67) --
-	( 91.77, 72.59) --
-	( 94.77, 78.45) --
-	( 97.78, 78.57) --
-	(100.78, 83.81) --
-	(103.79, 86.56) --
-	(106.80, 85.94) --
-	(109.80, 92.57) --
-	(112.81, 95.46) --
-	(115.81, 98.41) --
-	(118.82,102.64) --
-	(121.82,102.38) --
-	(124.83,106.28) --
-	(127.84,110.72) --
-	(130.84,112.06) --
-	(133.85,116.16) --
-	(136.85,119.03);
-
-\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] ( 34.66, 30.63) --
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.66, 30.63) --
 	( 37.66, 30.63) --
 	( 40.67, 31.33) --
 	( 43.67, 31.33) --
@@ -241,9 +205,45 @@
 	(130.84,119.28) --
 	(133.85,123.20) --
 	(136.85,125.87);
+
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] ( 34.66, 29.90) --
+	( 37.66, 30.63) --
+	( 40.67, 30.63) --
+	( 43.67, 29.90) --
+	( 46.68, 30.63) --
+	( 49.68, 31.33) --
+	( 52.69, 32.63) --
+	( 55.70, 33.82) --
+	( 58.70, 35.45) --
+	( 61.71, 38.26) --
+	( 64.71, 40.62) --
+	( 67.72, 42.34) --
+	( 70.73, 46.05) --
+	( 73.73, 49.23) --
+	( 76.74, 52.36) --
+	( 79.74, 64.35) --
+	( 82.75, 58.30) --
+	( 85.75, 68.19) --
+	( 88.76, 70.67) --
+	( 91.77, 72.59) --
+	( 94.77, 78.45) --
+	( 97.78, 78.57) --
+	(100.78, 83.81) --
+	(103.79, 86.56) --
+	(106.80, 85.94) --
+	(109.80, 92.57) --
+	(112.81, 95.46) --
+	(115.81, 98.41) --
+	(118.82,102.64) --
+	(121.82,102.38) --
+	(124.83,106.28) --
+	(127.84,110.72) --
+	(130.84,112.06) --
+	(133.85,116.16) --
+	(136.85,119.03);
 \definecolor{drawColor}{RGB}{231,41,138}
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 34.66, 34.38) --
+\path[draw=drawColor,line width= 0.6pt,dash pattern=on 2pt off 2pt ,line join=round] ( 34.66, 34.38) --
 	( 37.66, 34.38) --
 	( 40.67, 34.93) --
 	( 43.67, 35.45) --
@@ -481,7 +481,7 @@
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
 \definecolor{fillColor}{RGB}{255,255,255}
 
-\path[fill=fillColor] (150.96,  8.58) rectangle (220.57, 58.93);
+\path[fill=fillColor] (150.96,  8.58) rectangle (208.75, 58.93);
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
@@ -511,12 +511,12 @@
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (174.42, 32.28) {functions};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (174.42, 32.28) {bijections};
 \end{scope}
 \begin{scope}
 \path[clip] (  0.00,  0.00) rectangle (240.29,135.16);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (174.42, 17.82) {permutations};
+\node[text=drawColor,anchor=base west,inner sep=0pt, outer sep=0pt, scale=  0.72] at (174.42, 17.82) {functions};
 \end{scope}
 \end{tikzpicture}
